# BASTION

./: .env.example  .gitignore  BASTION_Solution_Design.md  DEPLOYMENT.md  Design.md  IMPLEMENTATION_CHECKLIST.md  ML_ENHANCEMENTS_SUMMARY.md  ML_INTEGRATION.md  README.md  THREAT_INTEL_PHASE1_COMPLETE.md  pyproject.toml  requirements.txt  run_api.bat  trust.json
Log_Agent/: .env  CloudTrail.json  agent.py  main.py  requirements.txt
Log_Agent/modules/: bedrock_client.py  gemini_client.py  log_parser.py
bastion/: __init__.py  config.py  logger.py
bastion/agents/: __init__.py  email_analyst.py  forensic_analyst.py  supervisor.py  synthesis.py  threat_intel.py
bastion/graph/: __init__.py  workflow.py
bastion/models/: __init__.py  ml_models.py  semantic_analyzer.py  state.py
bastion/services/: __init__.py  athena.py  bedrock.py  dynamodb.py  eventbridge.py  gemini.py  pii_scrubber.py  report_validator.py  s3.py
bastion/tools/: __init__.py  aws_helpers.py  (+3 more)
docs/: deployment.md  design.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
lambda_handlers/: api_handler.py  tier1_filter_handler.py  trigger_handler.py
notebooks/: README.md  bastion_ml_models.ipynb
scripts/: api_server.py  debug_output.txt  evaluate_dataset.py  export_training_data.py  generate_synthetic_cloudtrail.py  output.txt  run_local.py  test_e2e_threat_intel.py  test_ml_integration.py  test_threat_intel.py  train_lstm_uba.py  train_semantic_analyzer.py  validate_threat_intel.py  visualize_semantic_analyzer.py
test/: bastion_e2e_demo.ipynb
(+51 files in other folders)
